--- a/src/components/Gallery/galer.css
+++ b/src/components/Gallery/galer.css
@@ -1,8 +1,18 @@
+.parent{
+  display: table;
+  position: relative;
+  left: 100px;
+}
+
 div.gallery {
+    display: table-cell;
     margin: 5px;
     border: 1px solid #ccc;
     float: left;
-    width: 180px;
+    width: 300px;
+    height: 140px;
+ 
+
   }
   
   div.gallery:hover {
@@ -10,8 +20,8 @@ div.gallery {
   }
   
   div.gallery img {
-    width: 100%;
-    height: auto;
+    width: 100% ;
+    height: 100%;
   }
   
   div.desc {
