--- a/src/components/Gallery/Modal.css
+++ b/src/components/Gallery/Modal.css
@@ -1,44 +1,100 @@
 body.active-modal {
-    overflow-y: hidden;
+  overflow-y: hidden;
 }
 
 .btn-modal {
-    padding: 10px 20px;
-    display: block;
-    margin: 100px auto 0;
-    font-size: 18px;
+  padding: 10px 20px;
+  display: block;
+  margin: 100px auto 0;
+  font-size: 18px;
 }
 
 .modal, .overlay {
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  overflow: scroll;
 }
 
 .overlay {
-    background: rgba(49,49,49,0.8);
+  background: rgba(49,49,49,0.8);
 }
 .modal-content {
-    position: absolute;
-    top: 2%;
-    left: 33%;
- 
-    line-height: 1.4;
-    background: #f1f1f1;
-    padding: 14px 28px;
-    border-radius: 1px;
-    max-width: 600px;
-    min-width: 300px;
-    image-resolution: from-image;
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  margin: 10px;
+  line-height: 1;
+  background: #8c8c8c;
+  padding: 4px 4px;
+  border-radius: 1px;
+  max-width: 800px;
+  min-width: 300px;
+  image-resolution: from-image;
+  margin-left:-400px;
 }
 
-.close-modal {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    padding: 5px 7px;
+
+
+
+.button-50 {
+position: absolute;
+top: 10px;
+right: 10px;
+padding: 5px 7px;
+
+appearance: button;
+background-color: #000;
+background-image: none;
+border: 1px solid #000;
+border-radius: 4px;
+box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+box-sizing: border-box;
+color: #fff;
+cursor: pointer;
+display: inline-block;
+font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
+font-size: 14px;
+font-weight: 400;
+line-height: 10px;
+margin: 0 5px 10px 0;
+overflow: visible;
+width: 20px;
+text-align: center;
+text-transform: none;
+touch-action: manipulation;
+user-select: none;
+-webkit-user-select: none;
+vertical-align: middle;
+white-space: nowrap;
 }
+
+.button-50:focus {
+text-decoration: none;
+}
+
+.button-50:hover {
+text-decoration: none;
+}
+
+.button-50:active {
+box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
+outline: 0;
+}
+
+.button-50:not([disabled]):active {
+box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+.button-50 {
+  padding: 12px 50px;
+}
+}
+
+
