--- a/src/components/blog/wyglad.css
+++ b/src/components/blog/wyglad.css
@@ -1,34 +1,55 @@
-.blog-diw{
-    position: relative;
-    display: table;
-    background-color:#F4F6F6;
-    height: 200px;
-    width: 500px;
-    text-shadow: ;
-    box-shadow:
-    0 1.8px 1.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-    0 1.5px 10px rgba(0, 0, 0, 0.06),
-    0 2.3px 17.9px rgba(0, 0, 0, 0.072),
-    0 2.8px 33.4px rgba(0, 0, 0, 0.086),
-    0 2px 80px rgba(0, 0, 0, 0.12)
-  ;
-   border-radius:50px;
 
-   -webkit-transition: background-color 2s ease-out;
-   -moz-transition: background-color 2s ease-out;
-   -o-transition: background-color 2s ease-out;
-   transition: background-color 2s ease-out;
-    margin:20px
-}
-.blog-diw:hover{
-    background-color: powderblue;
+
+
+.left{
+   float: left;
+   width: 60%;
+   position: absolute;
 }
 
-.a{
-    color : black;
+
+.right{
+    margin-top:40px;
+    float:right;
+    width:40%;
     
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+.blog-diw2{
+    position: inherit;
+    border-radius:1px;
+    height: 500px;
+    width: inherit;
+    max-width: inherit;
+    max-height: 500px;
+    margin-bottom: 30px;
+    margin-left:40px;
+    border-bottom:1px solid rgba(0,0,0,.1);
+    background-color: rgba(0,0,1,.1);
+}
+.blog-diw2 a{
+    color:black;
+}
+
+
+.blog-diw2:hover{
+    background-color: rgba(0,0,0,.2);
+}
+
+
 
 a:hover, a:active {
     text-decoration: none;
@@ -36,8 +57,15 @@ a:hover, a:active {
   }
 
 
-.content-diw{
+.content-diw2{
     height:10px;
     text-align:center;
     margin:40px;
+ 
+}
+.blog-diw2 img{
+    
+    height: 40%;
+    width:50%;
+    max-height: 280px;
 }
