--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -5,24 +5,24 @@
     width:60%;
     position: absolute;
     max-width: 65%;
-
+    z-index: -2;
     
 }
 
 
 .about-card{
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(1, 1, 1, 0.15);
     margin-bottom: 5%;
     height: 250px;
     width : 1000px;
     max-height:100%;
     max-width: 100%;
-    color: white;  
+    color: black;  
     border-radius: 10px;
 }
 
 .about-card:hover{
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(102, 31, 53, 0.5);
 }
 
 
@@ -42,9 +42,9 @@
 }
     
 .image-card img{
-    width:100%;
+    width:110%;
     height:200px;
-    width:250px;
+    width:290px;
     max-height:100%;
     max-width: 100%;
 
@@ -74,7 +74,7 @@
 
 
 .contact{
-    color:white;
+    color:black;
     float: left;
     height:450px;
     width:90%;
