--- a/src/components/blog/tag.css
+++ b/src/components/blog/tag.css
@@ -3,6 +3,12 @@
 
 
 
+.event-post:hover{
+    background-color:rgba(0,0,0,.1);
+    width: 110%;
+}
+
+
 .tag {
     display: inline-block;
     border-radius: 3px;
