--- a/src/components/Search/search.css
+++ b/src/components/Search/search.css
@@ -1,7 +1,7 @@
 
 
 .search-div{
-    margin-top:50px;
+    margin-top:45px;
 }
 
 
@@ -10,15 +10,15 @@
 .search-div form{
     position: relative;
     top: 50%;
-    left: 50%;
+    left: 30%;
     transform: translate(-50%,-50%);
     transition: all 1s;
     width: 50px;
     height: 50px;
-    background: white;
+    background: #661f35cc;
     box-sizing: border-box;
     border-radius: 25px;
-    border: 4px solid white;
+    border: 4px black;
     padding: 5px;
 }
 
@@ -30,7 +30,7 @@
     height: 42.5px;
     line-height: 30px;
     outline: 0;
-    border: 0;
+    border: 3;
     display: none;
     font-size: 1em;
     border-radius: 20px;
