--- a/src/components/blog/wyglad.css
+++ b/src/components/blog/wyglad.css
@@ -28,9 +28,15 @@
     margin-left:40px;
     border-bottom:1px solid rgba(0,0,0,.1);
     background-color: rgba(0,0,0,.05);
-}
-.blog-diw2 a{
     color:black;
+}
+
+.blog-diw2 > *{
+    color:inherit;
+}
+
+.blog-diw2 a{
+    color:inherit;
 }
 
 
