--- a/src/components/declaration/declaration.css
+++ b/src/components/declaration/declaration.css
@@ -29,34 +29,24 @@
 
 
 .left-side{
-    width : 50%;
+    width : 40%;
     float:left;
-
 }
 
-.right-side{
-    width : 50%;
+
+.right-side {
+    width : 40%;
     float:right;
-    
 }
-.decl-box{
+
+
+.join-box{
    
-        border-top-left-radius: 37px 120px;
-        border-top-right-radius: 23px 110px;
-        border-bottom-left-radius: 110px 19px;
-        border-bottom-right-radius: 120px 24px;
-      
-        display: block;
-        position: relative;
-        border: solid 3px #6e7491;
-        padding: 40px 60px;
         max-width: 800px;
         width: 90%;
         margin: 100px auto 0;
         font-size: 17px;
         line-height: 28px;
-        transform: rotate(-1deg);
-        box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
         transition: all 0.13s ease-in;
         height:600px;
       
@@ -88,3 +78,9 @@
   box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
   outline: 0;
 }
+
+.information-label {
+    color: red;
+    font-weight: bold;
+}
+
