--- a/src/components/downloadable/downloadable.css
+++ b/src/components/downloadable/downloadable.css
@@ -88,3 +88,29 @@
   box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
   outline: 0;
 }
+
+
+.file-card{
+    /*background-color: rgba(1, 1, 1, 0.15);*/
+    margin-bottom: 5%;
+    height: 100px;
+    width : 1000px;
+    max-height:100%;
+    max-width: 100%;
+    color: black;  
+    border-radius: 10px;
+}
+
+
+.file-card-content{
+    float:left;
+    width:30%;
+    margin-top:20px;
+    margin-left:20px;
+    max-width: 50%;
+    max-height: 100px;
+    text-align: start;
+    position: absolute;
+    ruby-position: right;
+}
+
