--- a/src/components/declaration/declaration.css
+++ b/src/components/declaration/declaration.css
@@ -1,4 +1,4 @@
-.css-input {
+/*.css-input {
     padding: 6px;
     font-size: 20px;
     border-width: 0px;
@@ -11,7 +11,7 @@
     text-shadow: -50px 0px 0px rgba(66,66,66,.0);
     margin-top:30px;
     margin-bottom: 30px;
-}
+}*/
 .css-input:focus {
     padding: 6px;
     font-size: 20px;
